added  swagger documentation in the authcontroller
